Fix text overlapping on small screens

--- a/src/app/home/top-page/top-page.component.scss
+++ b/src/app/home/top-page/top-page.component.scss
@@ -18,7 +18,7 @@
 
   span {
     display: inline-block;
-    width: 10%;
+    min-width: 10%;
   }
 }
 
